Fix form width on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ body{
 }
 
 form{
-  width: 50%;
+  width: 60%;
   display: inline-block;
   text-align: left;
   margin-bottom: 50px;
@@ -13,4 +13,11 @@ form{
 
 .required-marker{
   color: red;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  form{
+    width: 90%;
+  }
 }
